Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/Case_Forward_to_queue__mdt.object-meta.xml
<CustomObject>
    <label>Case - Forward to queue</label>
    <pluralLabel>Cases - Forward to queue</pluralLabel>
</CustomObject>