Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/fields/IsDynamic__c.field-meta.xml
<CustomField>
    <fullName>IsDynamic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dynamic?</label>
    <type>Checkbox</type>
</CustomField>