Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>2</length>
    <type>Text</type>
</CustomField>