Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AtendimentoAoClienteQueue</fullName>
                <default>true</default>
                <label>Atendimento ao Cliente</label>
            </value>
            <value>
                <fullName>Registration</fullName>
                <label>Cadastro</label>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Devolucao</fullName>
                <label>Devolução</label>
            </value>
            <value>
                <fullName>NotaFiscal__r.Pedido__r.CreatedById</fullName>
            </value>
            <value>
                <fullName>Regulatorios</fullName>
                <label>Regulatórios</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>