Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Valor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelamento do Pedido</fullName>
            </value>
            <value>
                <fullName>Carta de Correção</fullName>
            </value>
            <value>
                <fullName>Elogio</fullName>
            </value>
            <value>
                <fullName>Entrega/Logística</fullName>
            </value>
            <value>
                <fullName>Faturamento Pedido</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Financeiro (Incidente)</fullName>
            </value>
            <value>
                <fullName>Histórico</fullName>
            </value>
            <value>
                <fullName>Pedido com Divergência</fullName>
            </value>
            <value>
                <fullName>Reclamação</fullName>
            </value>
            <value>
                <fullName>Refaturamento</fullName>
            </value>
            <value>
                <fullName>Tracking do Pedido</fullName>
            </value>
            <value>
                <fullName>Tracking do Pedido (Incidente)</fullName>
            </value>
            <value>
                <fullName>Cadastro</fullName>
            </value>
            <value>
                <fullName>Devolução</fullName>
            </value>
            <value>
                <fullName>Regulatórios</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Faturar novo pedido</fullName>
            </value>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Bonificação não autorizada</fullName>
            </value>
            <value>
                <fullName>Cadastro Cliente</fullName>
                <isActive>false</isActive>
                <label>Cadastro Cliente</label>
            </value>
            <value>
                <fullName>Devolução Após Entrega</fullName>
                <isActive>false</isActive>
                <label>Devolução Após Entrega</label>
            </value>
            <value>
                <fullName>Devolução de Amostra</fullName>
                <isActive>false</isActive>
                <label>Devolução de Amostra</label>
            </value>
            <value>
                <fullName>Devolução de Comodato</fullName>
                <isActive>false</isActive>
                <label>Devolução de Comodato</label>
            </value>
            <value>
                <fullName>Devolução no Ato da Entrega</fullName>
                <isActive>false</isActive>
                <label>Devolução no Ato da Entrega</label>
            </value>     
        </valueSetDefinition>
    </valueSet>
</CustomField>