Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Em Andamento</fullName>
                <default>true</default>
                <label>Em Andamento</label>
            </value>
            <value>
                <fullName>Em Espera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>