Git Tests/force-app/main/default/default/objects/Case_Forward_to_queue__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Queue__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>IsDynamic__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>